--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "python_tool_competition_2024_unittestbot"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 python-tool-competition-2024 = "^0.1.1"
-
+utbot_dist = { url = "https://github.com/tochilinak/tmp/releases/download/v0.0/utbot_dist-0.1.0.tar.gz" }
 
 [build-system]
 requires = ["poetry-core"]
